vpc.tf
data "aws_availability_zones" "available" {
  exclude_names = ["us-east-1-chi-1a"]
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "main" {
  vpc_id               = aws_vpc.main.id
  cidr_block           = var.vpc_cidr
  availability_zone_id = data.aws_availability_zones.available.zone_ids[0]
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "main" {
  route_table_id = aws_route_table.main.id
  subnet_id      = aws_subnet.main.id
}
